# lumos-cli

./: .gitignore  .pre-commit-config.yaml  .releaserc.yaml  CHANGELOG.md  CONTRIBUTING.md  IMPLEMENTATION_SUMMARY.md  LINTING.md  Makefile  QUICK_START.md  README.md  client.py  customer-secrets.sh  models.py  package-lock.json  package.json  package.sh  pyproject.toml  reinstall.sh  release.sh  requirements.txt  state.py  version.sh
.cursor/: Dockerfile
.cursor/rules/: commit-message.mdc  docs.mdc
.devcontainer/: devcontainer.json
.github/homebrew-templates/: lumos.rb.template
.github/workflows/: README.md  build-binaries.yml  build.yml  docs.yml  release.yml  update-homebrew-formula.yml
appstore/: __main__.py  cli.py
common/: client.py  client_helpers.py  helpers.py  keyhelpers.py  logging.py  models.py
docs/: DX-769-homebrew-improvements.md  Makefile  authentication.md  cli-reference.md  conf.py  contributing.md  examples.md  index.md  installation.md  reference.md
docs/_build/markdown/: cli-reference.md  index.md  installation.md
docs/scripts/: generate_readme_docs.py
docs/sphinx/: cli-reference.md  conf.py  contributing.md  examples.md  index.md  installation.md
docs/src/: authentication.md  conf.py  contributing.md  examples.md  index.md  installation.md  reference.md
list_collections/: cli.py
lumos/: __init__.py  __main__.py  cli.py
request/: cli.py  client.py
sample-scripts/: create_requests.py  customer-secrets.sh
scripts/: README.md  test-homebrew-formula.sh  update-homebrew-formula.sh
src/lumos/: __init__.py  __main__.py  cli.py
src/lumos/common/: client.py  client_helpers.py  helpers.py  keyhelpers.py  logging.py  models.py
src/lumos/list_collections/: __init__.py  cli.py
src/lumos/request/: cli.py
src/lumos_cli/: __init__.py  __main__.py  cli.py
src/lumos_cli/commands/: __init__.py  app.py  display.py  group.py  permission.py  request.py  user.py
src/lumos_cli/common/: __init__.py  client.py  client_helpers.py  helpers.py  keyhelpers.py  logging.py  models.py
src/lumos_cli/list_collections/: __init__.py  cli.py
src/lumos_cli/request/: __init__.py  cli.py
status/: cli.py
tests/: cli_test.py  client_helpers_test.py  helpers_test.py
