[project]
name = "lumos"
version = "2.3.0"
description = "Lumos command line interface."
readme = "README.md"
authors = [{ name = "lumos-dev" }]
license = { text = "MIT" }
requires-python = ">=3.10.6,<4"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: System Administrators",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "annotated-types==0.6.0",
    "certifi==2024.2.2",
    "charset-normalizer==3.3.2",
    "click==8.1.7",
    "colorama==0.4.6",
    "idna==3.6",
    "pick==2.2.0",
    "pydantic==2.6.1",
    "pydantic_core==2.16.2",
    "pytz==2024.1",
    "requests==2.31.0",
    "shellingham==1.5.4",
    "tabulate==0.9.0",
    "typer==0.9.0",
    "types-pytz==2024.1.0.20240203",
    "types-tabulate==0.9.0.20240106",
    "typing-extensions>=3.7.4.3",
    "typing_extensions==4.9.0",
    "urllib3==2.2.0",
    "pyinstaller>=6.5.0,<7",
    "types-requests==2.31.0.20240403",
    "pytest>=8.2.2,<9",
]

[project.scripts]
lumos = "lumos.__main__:main"

[project.urls]
Homepage = "https://github.com/teamlumos/lumos-cli"
Repository = "https://github.com/teamlumos/lumos-cli"
Issues = "https://github.com/teamlumos/lumos-cli/issues"

[dependency-groups]
dev = ["debugpy>=1.8.0,<2"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["lumos", "common", "request", "list_collections"]
