[project]
name = "lumos-cli"
version = "2.3.0"
description = "Lumos command line interface."
readme = "README.md"
authors = [{ name = "lumos-dev" }]
license = { text = "MIT" }
requires-python = ">=3.10.6,<4"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: System Administrators",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "annotated-types==0.6.0",
    "certifi==2024.2.2",
    "charset-normalizer==3.3.2",
    "click-extra>=7.4.0,<8",
    "idna==3.6",
    "pick==2.2.0",
    "pydantic==2.6.1",
    "pydantic_core==2.16.2",
    "pytz==2024.1",
    "requests>=2.31.0",
    "tabulate==0.9.0",
    "types-pytz==2024.1.0.20240203",
    "types-tabulate==0.9.0.20240106",
    "typing-extensions>=3.7.4.3",
    "typing_extensions==4.9.0",
    "urllib3==2.2.0",
    "pyinstaller>=6.5.0,<7",
    "types-requests==2.31.0.20240403",
    "pytest>=8.2.2,<9",
]

[project.urls]
Homepage = "https://github.com/teamlumos/lumos-cli"
Repository = "https://github.com/teamlumos/lumos-cli"
Issues = "https://github.com/teamlumos/lumos-cli/issues"

[dependency-groups]
dev = [
    "debugpy>=1.8.0,<2",
    "ruff>=0.8.0,<1",
    "basedpyright>=1.21.0,<2",
    "pre-commit>=4.0.0,<5",
]
docs = [
    "sphinx>=7.0.0,<8",
    "myst-parser>=3.0.0,<4",
    "sphinx-rtd-theme>=2.0.0,<3",
    "pygments-ansi-color>=0.3.0,<1",
    "sphinx-markdown-builder>=0.6.0,<1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
lumos = "lumos_cli.cli:lumos"

[tool.ruff]
# Set the target Python version
target-version = "py310"

# Set line length
line-length = 120

# Exclude common directories
exclude = [
    ".git",
    ".venv",
    "venv",
    "__pycache__",
    "build",
    "dist",
    "*.egg-info",
]

[tool.ruff.lint]
# Enable recommended rule sets
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "N",      # pep8-naming
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "SIM",    # flake8-simplify
    "RUF",    # Ruff-specific rules
]

# Ignore specific rules if needed
ignore = [
    "E501",   # Line too long (handled by formatter)
]

# Allow autofix for all enabled rules
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.per-file-ignores]
# Ignore certain rules in test files
"tests/**/*.py" = [
    "S101",   # Use of assert
]

[tool.ruff.format]
# Use double quotes for strings
quote-style = "double"

# Use spaces for indentation
indent-style = "space"

# Respect magic trailing comma
skip-magic-trailing-comma = false

# Auto-detect line ending
line-ending = "auto"

[tool.basedpyright]
# Type checking mode
typeCheckingMode = "standard"

# Python version
pythonVersion = "3.10"

# Include/exclude patterns
include = ["src", "tests"]
exclude = [
    "**/__pycache__",
    "**/node_modules",
    ".venv",
    "venv",
    "build",
    "dist",
]

# Reporting options
reportMissingImports = true
reportMissingTypeStubs = false
reportUnusedImport = "warning"
reportUnusedVariable = "warning"
reportDuplicateImport = "error"

# Relax type checking for existing codebase
reportUnknownParameterType = "none"
reportUnknownArgumentType = "none"
reportUnknownMemberType = "none"
reportUnknownVariableType = "none"
reportUnknownLambdaType = "none"
reportCallIssue = "none"
reportArgumentType = "none"
reportAttributeAccessIssue = "none"
reportReturnType = "none"
reportAssignmentType = "none"
reportFunctionMemberAccess = "none"
reportGeneralTypeIssues = "none"
reportPrivateUsage = "warning"
